Fix T76364: GPencil grid is not located in the right place

During the refactor, the location of the grid was broken. Now, the grid is in Object origin or 3D cursor origin as it was in 2.82.